--- a/Nivell-1.3/style.css
+++ b/Nivell-1.3/style.css
@@ -52,7 +52,6 @@
 .section{
     background: #000;
     display: flex;
-    
 }
 
     .articulos{
@@ -98,5 +97,29 @@
     .section{
         flex-direction: column;
         background: yellow;
+    }
+}
+
+@media (max-width: 600px){
+    .menu{
+        flex-flow: column;
+        height: auto;
+    }
+
+    .logo{
+        width: 100%;
+    }
+
+    .nav{
+        width: 100%;
+    }
+
+    .social{
+        width: 100%;
+    }
+
+    .article{
+        flex: 1 1 100%;
+        flex-direction: column;
     }
 }
