--- a/Nivell-2.1/style.css
+++ b/Nivell-2.1/style.css
@@ -24,7 +24,7 @@ a:hover{
 }
 
 .header{
-    background-image:url(img/header.jpg) ;
+    background-image:url(../img/header.jpg);
     background-position: center;
     background-size: cover;
     display: flex;
