--- a/Nivell-2.2/style.css
+++ b/Nivell-2.2/style.css
@@ -80,6 +80,7 @@ a:hover{
 
         .article img{
             width: 100%;
+            padding: 0;
         }
 
         .article h3{
@@ -107,8 +108,9 @@ a:hover{
     
     .aside{
         background: lightgray;
-        border: 0.5rem solid white;
+        border-left: 0.5rem solid white;
         flex: 1 1 250rem;
+        flex-flow: column wrap;
     }
     
         .publicidad{
@@ -128,29 +130,62 @@ a:hover{
     }
 
 
-@media (max-width: 800px){
+@media (max-width: 960px){
     .section{
         flex-direction: column;
-        background: yellow;
     }
-}
 
-@media (max-width: 600px){
     .menu{
-        flex-flow: column;
+        flex-direction: column;
         height: auto;
     }
 
-    .logo{
+    .aside{
+        border-left: 0;
+        border-top: 0.5rem solid white;
+        flex: 1 1 20rem;
+    }
+
+    .navegacion{
+        margin: 0px;
+    }
+
+    .nav{
+        font-size: 11px;
+        margin-top: -30px;
+    }
+
+    .social{
+        font-size: 9px;
+        margin-top: -30px;
+    }
+}
+
+@media (max-width: 710px){
+    
+    .menu{
+        flex-direction: column;
+    }
+
+    #logojap{
         width: 100%;
+        margin-top: -10px;
+        
+    }
+
+    .off{
+        display: none;
     }
 
     .nav{
         width: 100%;
+        font-size: 17px;
+        margin-top: -40px;
+        text-align: center;
     }
 
     .social{
-        width: 100%;
+        font-size: 14px;
     }
 
     .article{
