--- a/Nivell-3.2/style.css
+++ b/Nivell-3.2/style.css
@@ -68,7 +68,6 @@ a:hover{
     text-align: left;
     background-color: white;
     height: 100%;
-    
 }
 
     .article img{
@@ -90,6 +89,10 @@ a:hover{
     .texto{
         columns: 60px 2;
         color: rgb(98, 97, 97);
+    }
+
+    .article a{
+        
     }
 
 .aside{
@@ -119,4 +122,122 @@ a:hover{
     }
    
 
+
+    @media (max-width: 960px){
+
+        .container{
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: 0.4fr repeat(2, 1fr) 0.1fr 0.1fr;
+        }
+
+        .menu {
+            grid-column: 1 / 3;
+        }
+
+        #logojap{
+            height: 60px;
+            text-align: right;
+        }
+
+        .social{
+            font-size: 9px;
+            margin-top: -50px;
+        }
+
+        .nav{
+            font-size: 10px;
+        }
+
+        .navegacion{
+            grid-column: 1 / 3;
+            grid-row: 4 / 5;
+            
+        }
+
+        .aside{
+            grid-column: 1 / 3;
+            grid-row: 5 / 6;
+            border-left: none;
+            border-top: 1rem solid white;
+        }
+
+        .footer{
+            grid-column: 1 / 3;
+            grid-row: 6 / 7;
+        }
+
+        .pie{
+            margin-top: none;
+        }
+    }
     
+    @media (max-width: 780px){
+        
+        .container{
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 0.4fr repeat(4, 1fr) 0.1fr 0.1fr;
+        }
+
+        .box{
+            grid-column: 1;
+        }
+
+        .menu {
+            grid-column: 1 / 2;
+        }
+
+        .off{
+            display: none;
+        }
+
+        .logo{
+            text-align: center;
+            margin-top: -30px;
+        }
+
+        #logojap{
+            height: 60px;
+            
+        }
+
+        .social{
+            font-size: 9px;
+            margin-top: -20px;
+            text-align: center;
+        }
+
+        .nav{
+            font-size: 10px;
+            margin-top: -10px;
+        }
+
+        .texto-principal h1{
+            font-size: 1rem;
+            
+        }
+
+        .navegacion{
+            grid-column: 1 / 2;
+            grid-row: 6 / 7;
+            border-top: 1rem solid white;
+        }
+
+        .aside{
+            grid-column: 1 / 2;
+            grid-row: 7 / 8;
+            border-left: none;
+            border-top: 1rem solid white;
+        }
+
+        .footer{
+            grid-column: 1 / 2;
+            grid-row: 8 / 9;
+        }
+
+        .pie{
+            margin-top: none;
+        }
+    }
+        
